Resolved #6 Add line wrapping

--- a/app/css/style.sass
+++ b/app/css/style.sass
@@ -63,8 +63,10 @@ $header-height: 35px
 
     & > *
       display: inline-block
-    .flavor
+    .pane-settings
       float: right
+      & > *
+        display: inline-block
 
   .editor
     @extend %stretch
